Fix realtime event handling
